# quizzy

./: .gitignore  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
docs/: README.md  architecture.md  development.md  features.md  github-releases.md  knowledge-format.md  native-storage.md  quick-start.md  quiz-format.md
sample-knowledge/: markdown-showcase.md
sample-quizzes/: comprehensive-stress-test.json  css-basics.json  javascript-basics.json  markdown-showcase.json  react-basics.json
sample-quizzes/knowledge-base/: markdown-showcase.md
src/: index.css  katex-overrides.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: data_sync.rs  goals_storage.rs  lib.rs  main.rs  mistake_index.rs
src/app/: routes.tsx
src/contexts/: AppSettingsContext.tsx  GoalsContext.tsx  KnowledgeLibraryContext.tsx  MistakeLogSettingsContext.tsx  QuizLibraryContext.tsx  QuizPreferencesContext.tsx  QuizStartDialogContext.tsx  UiPreferencesContext.tsx  UserProfileContext.tsx  WorkingDirectoryContext.tsx  app-shortcuts-context.ts  goals-context.ts  knowledge-library-context.ts  mistake-log-settings-context.ts  quiz-library-context.ts  quiz-preferences-context.ts  quiz-start-dialog-context.ts  ui-preferences-context.ts  user-profile-context.ts  working-directory-context.ts
src/data/: knowledgeRepository.test.ts  knowledgeRepository.ts  knowledgeSchema.ts  quizSchema.ts  (+3 more)
(+249 files in other folders)
