[package]
name = "quizzy"
version = "0.1.6"
description = "A local-file desktop quiz application"
authors = ["Quizzy contributors"]
edition = "2021"

[lib]
name = "quizzy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

